Updated testing to reflect classes change.